<?xml version="1.0"?>
<package format="2">
  <name>ensenso</name>
  <version>0.1.0</version>
  <description>The ensenso package</description>

  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/ensenso</url>
  <url type="bugtracker">https://github.com/crigroup/ensenso/issues</url>
  <url type="repository">https://github.com/crigroup/ensenso</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf_conversions</depend>
  
  <exec_depend>image_view</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
  <exec_depend>rqt_rviz</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  <exec_depend>message_runtime</exec_depend>
  
</package>

